src/test/deca/syntax/valid/moitie.deca
// Description:
//          Affichage en flottant de la moitié du carré d'un entier
//
// Résultat:
//Succès
//
{
    int x;
    x = readInt() ;
    println(0.5*(x*x)) ;
}