src/test/deca/syntax/invalid/no_CBRACE.deca
//  Description :
//            Pas de } à la fin du fichier
//
// Résultat:
//missing '}' at '<EOF>'
//
{
    println("Hello");
